# trajectories

./: .dockerignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
apps/trajgen/: pyproject.toml
apps/trajgen/fixtures/: coding_fibonacci.json  coding_fizzbuzz.json  coding_reverse_string.json  humaneval_kimi.json
apps/trajgen/tasks/: quick.jsonl  sample.jsonl
apps/trajgen/trajgen/: builder.py  cli.py  executor.py  sender.py  tasks.py  tools.py
apps/trajgen/trajgen/scorers/: __init__.py  pytest_scorer.py  string_match.py
apps/viewer-api/: pyproject.toml  schema.sql
apps/viewer-api/viewer_api/: app.py  db.py  search.py
apps/viewer-api/viewer_api/routes/: events.py  meta.py  runs.py  search.py  trajectories.py
apps/viewer-api/viewer_api/sse/: hub.py
apps/viewer-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/viewer-web/src/: App.tsx  app.css  main.tsx
apps/viewer-web/src/components/: EventTimeline.tsx  SqlEditor.tsx  TagChips.tsx  VerdictBadge.tsx
apps/viewer-web/src/lib/: api.ts  format.ts  sse.ts
apps/viewer-web/src/pages/: DetailPage.tsx  ListPage.tsx  RunDetailPage.tsx
apps/viewer-web/src/types/: api.ts
scripts/: seed.py
