[project]
name = "trajgen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "inspect-ai>=0.3.80",
    "pytest>=8.0",
    "trajectory-schema",
]

[project.scripts]
trajgen = "trajgen.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
trajectory-schema = { workspace = true }
